feat: refactor auth api
